# hey_you_good

./: .bazelrc  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yaml  deploy.yaml
dev/server/: BUILD  main.go  run_server.sh  server.crt  server.key
src/: App.module.scss  App.svelte  App.tsx  BUILD  Theme.tsx  browserHistory.ts  cloudStorage.ts  esbuild.config.mjs  feelingsModel.ts  main.ts  main.tsx  messages.ts  navigation.ts  new_main.tsx  serviceWorker.ts  theme.ts
src/components/: Button.module.scss  Button.svelte  Button.tsx  CheckIn.tsx  Checkbox.svelte  Checkin.module.scss  Feeling.module.scss  Feeling.tsx  Icon.svelte  LastWeek.module.scss  LastWeek.svelte  LastWeek.tsx  Page.module.scss  Page.svelte  Page.tsx  Switch.module.scss  Switch.svelte  Switch.tsx  Tag.module.scss  Tag.tsx  TagFeeling.module.scss  TagFeeling.tsx  TagIcons.tsx  TextArea.svelte  TextInput.module.scss  TextInput.svelte  TextInput.tsx  WarningBox.module.scss  WarningBox.svelte  WarningBox.tsx
src/contexts/: UserSettingsContext.tsx
src/icons/: IconBxAlarm.tsx  IconBxAward.tsx  IconBxBaguette.tsx  IconBxBed.tsx  IconBxBeer.tsx  IconBxBowlHot.tsx  IconBxBrain.tsx  IconBxBug.tsx  IconBxBus.tsx  IconBxCar.tsx  IconBxCheck.tsx  IconBxCheckCircle.tsx  IconBxCheckDouble.tsx  IconBxCheese.tsx  IconBxChurch.tsx  IconBxClinic.tsx  IconBxCloud.tsx  IconBxCoffee.tsx  IconBxCog.tsx  IconBxCookie.tsx  IconBxDice6.tsx  IconBxDizzy.tsx  IconBxDollar.tsx  IconBxDrink.tsx  IconBxDrop.tsx  IconBxError.tsx  IconBxEuro.tsx  IconBxFemale.tsx  IconBxFirstAid.tsx  (+25 more)
static/: BUILD  index.html  manifest.json  style.css
util/: BUILD  appendManifest.go
(+31 files in other folders)
